censusweb/media/css/census.css
/*---------------------------- General Styles --------------------------------*/

body, html {
    font-family: Helvetica, Arial, sans-serif;
}
.serif {
    font-family: "Palatino Linotype", "Book Antiqua", Palatino, FreeSerif, serif;
}
.interface, .button {
    font-family: "Lucida Grande", "Lucida Sans Unicode", Helvetica, Arial, sans-serif;
}
.code {
    font-family: Menlo, Consolas, Monaco, Courier, monospace;
}
.hidden {
    display: none;
}
h1, h2, h3, h4, h5, h6 {
    font-weight: bold;
}
h1 {
    font-size: 30px;
}
.link, #help-link {
    cursor: pointer;
    color: #aa0000;
    text-decoration: underline;
}
.button {
    cursor: pointer;
    background: #999;
    background: -webkit-gradient(linear, left top, left bottom, from(#bbb), to(#777));
    background: -moz-linear-gradient(top, #bbb, #777);
    padding: 3px 10px;
    -webkit-border-radius: 3px; -moz-border-radius: 3px; border-radius: 3px;
    -webkit-box-shadow: rgba(255,255,255,0.4) 0 1px 0 inset, rgba(0,0,0,0.4) 0 0 2px;
    -moz-box-shadow: rgba(255,255,255,0.4) 0 1px 0 inset, rgba(0,0,0,0.4) 0 0 2px;
    box-shadow: rgba(255,255,255,0.4) 0 1px 0 inset, rgba(0,0,0,0.4) 0 0 2px;
    text-shadow: rgba(0,0,0,0.4) 0 1px 0;
    border: 1px solid #999;
    color: #fff;
    font-size: 11px;
    font-weight: bold;
    text-decoration: none;
    vertical-align: text-bottom;
    white-space:nowrap;

    -webkit-transition: all 0.25s ease-in-out;
    -moz-transition: all 0.25 ease-in-out;
    -o-transition: all 0.25s ease-in-out;
}
.button:hover {
    opacity:.8;
}

/*-------------------------------- Layout ------------------------------------*/

#ajax-loader {
    position:absolute;
    top: 0;
    right: 0;
    margin-top: 10px;
    margin-right: 10px;
    font-weight: bold;
}

#ajax-loader img {
    position: relative;
    top: 3px;
    display: none;
}

header {
    padding: 30px 50px 25px;
    border-bottom: 1px solid #efefef;
}

aside {
    float:left;
    padding:15px;
    width:300px;
    display:none;
    position:relative;
    height:550px;
    overflow:auto;
    background-color:#E9F6FE;
    line-height:1.3em;
}

aside h2 {
    font-size: 20px;
    margin-bottom: 15px;
}

aside li {
    margin-bottom: 8px;
    font-size: 13px;
    font-variant:small-caps;
}

aside input {
    float: left;
    margin-top: 2px;
}

aside strong {
    font-weight: bold;
}

aside label {
    display: block;
    margin-left: 18px;
}

#container {
    margin: 40px 50px;
}

#container.with-browser {
    padding-left: 320px;
}

#logo {
}

nav {
    margin:20px 0;
}

#help-link, #help {
    font-size: 16px;
    margin-top: 20px;
}
    #help dt {
        color: #000;
        font-weight: bold;
        margin-bottom: 5px;
    }
    #help dd {
        color: #333;
        margin-bottom: 15px;
        max-width: 550px;
    }

#filter-help, #filter-display {
    display:inline;
    font-size: 12px;
    color: #777;
    padding: 6px 12px;
    border: 2px solid #ccc;
    background: #f4f4f4;
    border-radius: 3px;
}
    #filter-display {
        border-color: #bce;
        color: #333;
        background: #ddeeff;
    }

#search {
    font-size: 16px;
    line-height: 26px;
}
    #search select {
        font-size: 16px;
        margin: 0 3px;
    }

#proceed {
    position: absolute;
    margin-left: 5px;
    margin-top: -2px;
}

.report {
    border: 1px solid #ccc;
    margin-right: 25px;
    margin-bottom: 25px;
}

.report th {
    font-size: 22px;
    border: 1px solid #ccc; border-bottom-color: #ccc;
    padding: 12px;
    color: #333;
}

.report th .universe {
	font-weight: normal;
	font-size: 18px;
    display: block;
    line-height: 1.2em;
    margin-top: 5px;
}

.report th.subhead {
    font-size: 14px;
    border: 1px solid #ccc; border-bottom-color: #ccc;
    padding: 6px;
    color: #333;
    text-align: right;
    font-family: Menlo, Consolas, Monaco, Courier, monospace;
}

.report tr.row {}
.report tr.row.hidden {}
.report tr.row.has-children td.label {
    background-position: 5px 5px !important;
    background-repeat: no-repeat !important;
}
.report tr.row.has-children.closed td.label { 
    background-image:url('../images/plus.png') !important;
}
.report tr.row.has-children.open td.label {
    background-image:url('../images/minus.png') !important;
}

.report td {
    color: #333;
    padding: 5px 5px 5px 15px;
    text-align: right;
}

.report th.labeldef {
    width: 375px !important;
    vertical-align: top;
}
.report th.labeldef strong {
    font-weight: bold;
}
.report th.locationdef {
    background-color: #fff !important;
    width: 300px !important;
    font-weight: bold;
}
.report td.data-cell {
    width: 75px !important;
}
.report td.label {
    color: #000;
    padding: 5px 60px 5px 10px;
    border-right: 1px solid #ccc !important;
    text-align: left;
    width: 300px;
}

.report td.label .key {
    display: block;
    float: right;
    margin-right: -50px;
    text-align: right;
    font-size: 12px;
    color: #666;
}

.report tr.row.has-children td {
    border: 1px solid #ccc;
    font-weight:bold;
}

.report tr.row.highlight, colgroup.highlight, .report tr.row.highlight td {
    background-color: #fefbeb;
}
.highlight td.selected {
    background-color: #fdf4ca !important;
}

.report tr.indent-0 td.label {
    font-weight: bold;
    padding-left: 25px;
}

.report tr.indent-1 td.label {
    padding-left: 50px;
}

.report tr.indent-2 td.label {
    padding-left: 75px;
}

.report tr.indent-3 td.label {
    padding-left: 100px;
}

.report tr.indent-4 td.label {
    padding-left: 125px;
}

.report span.help_text {
    color:#A00;
    font-size:14px;
    cursor:pointer;
    text-decoration:underline;
}

#status {
    position:fixed;
    bottom:0;
    left:0;
    background-color:#FDF4CA;
    padding:5px;
}

.ui-dialog {
    overflow-y: scroll;
}
#search ol {
    margin-top: 20px;
}
#search .columnize {
    -moz-column-count: 3;
    -moz-column-gap: 20px;
    -webkit-column-count: 3;
    -webkit-column-gap: 20px;
    column-count: 3;
    column-gap: 20px;
}

